spectec/test/elab/neg/ctx-type-fully-redefined.t
  $ ./main.exe ctx-type-fully-redefined.spectec 2>&1
  error: type was already defined
    --> ctx-type-fully-redefined.spectec:4:8
    |
  4 | syntax foo = int
    |        ^^^
    = source: elab
  [1]
